@@ -53,7 +53,7 @@
                in listbox order to the file you selected.  Spectra are written using the swrite <em>-format ascii</em>
                command.   A spectrum file can be read in using the File-&gt;Read Spectrum File... command.</p>
             <br><br><a href="#top">Top</a>
-        <h3>Restore...</h3>
+        <h3>Load...</h3>
             <p>The File-&gt;Restore... command allows you to choose a saved spectrum script and
                 execute it to restore the state of analysis.</p>
             <br><br><a href="#top">Top</a>
